# HomeWorkCPP2.11.5

./: CMakeLists.txt  HomeWorkCPP2.11.5.cpp
FigureLibraryDynamic/: Figure.h  Parallelogram.cpp  Parallelogram.h  Quadrilateral.cpp  Quadrilateral.h  Rectrangle.cpp  Rectrangle.h  Rhombus.cpp  Rhombus.h  Square.cpp  Square.h  Triangle.cpp  Triangle.h  TriangleEquil.cpp  TriangleEquil.h  TriangleIsos.cpp  TriangleIsos.h  TriangleRight.cpp  TriangleRight.h
